tests/paczka1/fuzzy1/51796342.err
Error in line 3: wX41OvK S777 75,3
Error in line 12: S777 S197 76,7
Error in line 15: S777 S777 64,4
Error in line 29: b2HyjV3D S777 94,1
Error in line 33: FaI S777 48,8
